# -SIMULATION-

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  FEATURES.md
include/atmverse/core/: ATMController.h  AuthManager.h  BankSystem.h  CashDispenser.h  Logger.h  Receipt.h  ReportGenerator.h
include/atmverse/models/: Account.h  AccountRequest.h  Admin.h  Card.h  Customer.h  Person.h  Transaction.h
include/atmverse/persistence/: JSONManager.h
include/atmverse/ui/: Animations.h  ScreenManager.h  TerminalUI.h  Themes.h
include/atmverse/utils/: Utility.h
src/: main.cpp
src/core/: ATMController.cpp  AuthManager.cpp  BankSystem.cpp  CashDispenser.cpp  Logger.cpp  Receipt.cpp  ReportGenerator.cpp
src/models/: Account.cpp  AccountRequest.cpp  Admin.cpp  Card.cpp  Customer.cpp  Person.cpp  Transaction.cpp
src/persistence/: JSONManager.cpp
src/ui/: Animations.cpp  ScreenManager.cpp  TerminalUI.cpp  Themes.cpp
src/utils/: Utility.cpp
